--- a/public/css/style_admin.css
+++ b/public/css/style_admin.css
@@ -4,7 +4,6 @@ body {
     font-family: sans-serif;
     background-color: #EDF1F8;
     overflow-x: hidden;
-    
 }
 
 /* Admin Navbar */
@@ -16,7 +15,7 @@ header {
     padding: 0 100px;
     width: 100%;
     box-sizing: border-box;
-    background: #04192E;
+    background: #1A5184;
 }
 .logo {
     color: #FFFFFF;
@@ -59,6 +58,13 @@ nav ul li a:active {
     cursor: pointer;
     display: none;
 }
+a:hover {
+    text-decoration: none;
+    color: #FFB703;
+}
+.active {
+    color: #FFB703;
+}
 .profile_btn {
     margin-left: 310px;
     margin-top: 8px;
@@ -78,17 +84,25 @@ nav ul li a:active {
     color: #FFFFFF ;
 }
 .caret {
-    color: #FFFFFF ;
+    color: #FFFFFF;
     width: 5px;
     height: 5px;
 }
-a:hover {
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+.dropdown-menu .dropdown-item {
+    color: black;
+    padding: 12px 16px;
     text-decoration: none;
-    color: #FFB703;
+    display: block;
 }
-#active {
-    border-bottom: 1px solid #FFB703;
-}
+.dropdown-menu a:hover {background-color: #ddd;}
+
 
 
 
@@ -114,6 +128,9 @@ a:hover {
     padding-left: 10px;
     font-size: 15px;
 }
+.searchbar:focus {
+    outline: none;
+}
 .search_btn {
     height: 30px;
     width: 100px;
@@ -123,6 +140,16 @@ a:hover {
     color: rgba(255, 255, 255, .8);
     font-weight: bold;
 }
+.adjust_con:hover .search_btn {
+    border: #FFB703 2px solid;
+    color: #FFB703;
+    background-color: #EDF1F8;
+}
+.search_con:hover .search_btn {
+    border: #FFB703 2px solid;
+    color: #FFB703;
+    background-color: #EDF1F8;
+}
 
 
 /* Admin Login and Register Page */
@@ -131,36 +158,18 @@ a:hover {
 .reg_body {
     background-color: #CCCCCC;
 }
-.row_login, 
-.row_reg {
-    margin-top: 45px;
-}
 .login_con, 
 .register_con {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    margin-right: -40%;
-    transform: translate(-40%, -40%);
+    margin: 0 auto;
+    margin-top: 5%;
+    margin-bottom: 10%;
     width: 350px;
-    height: 350px;
-    background-color: #FFFFFF;
-    border-radius: 20px;
-    text-align: center;
-    box-shadow: 10px;
-}
-.reg_con {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    margin-right: -40%;
-    transform: translate(-40%, -40%);
-    width: 400px;
     height: auto;
     background-color: #FFFFFF;
     border-radius: 20px;
     text-align: center;
     box-shadow: 10px;
+    padding: 20px;
 }
 .login_fields, 
 .reg_fields {
@@ -168,15 +177,23 @@ a:hover {
     border-bottom: 2px solid #CCCCCC;
     outline: none;
     margin-top: 25px;
-    width: 250px;
+    width: 100%;
     padding: 3px;
+}
+.upload_label {
+    font-size: 15px;
+    float: left;
+    margin-top: 10px;
+    margin-right: 50px;
+    margin-left: 13px;
+    margin-bottom: 5px;
 }
 .login_btn, 
 .register_btn{
-    width: 100px;
+    width: 100%;
     height: 30px;
-    background-color: #FFEDDF;
-    color: #F6A06F;
+    background-color: #c0aea4;
+    color: #fff;
     font-weight: bolder;
     font-size: 15px;
     border: none;
@@ -184,12 +201,20 @@ a:hover {
     margin-bottom: 10px;
     border-radius: 5px;
 }
+.login_btn:hover, 
+.register_btn:hover
+{
+    border: #c0aea4 2px solid;
+    color: #c0aea4;
+    background-color: #fff;
+}
+
 .signin_label, 
 .register_label{
     color: #1A5184;
 }
-.register_link_btn, 
-.login_link_btn {
+.login_link_btn,
+.register_link_btn  {
     font-size: 12px;
     font-style: italic;
 }
@@ -264,10 +289,10 @@ a:hover {
     -moz-transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
-}  
+} 
 #report {
     margin-left: 50px;
-    margin-top: 100px;
+    margin-top: 20px;
     margin-bottom: 50px;
     color: #FFFFFF;
 }
@@ -294,16 +319,16 @@ a:hover {
     padding: 13px;
     border-radius: 10px;
     margin-right: 50px;
-    margin-top: 0px;
+    margin-top: 10px;
 }
 .sweep_cleaner{
     height: 90px;
     width: 170px;
-    background-color: #042A6B;
+    background-color: #e0996f;
     padding: 13px;
     border-radius: 10px;
     margin-right: 50px;
-    margin-top: 0px;
+    margin-top: 10px;
 }
 .value {
     font-size: 25px;
@@ -398,7 +423,11 @@ a:hover {
     padding-left: 24px;
     padding-top: 4px;
 }
-
+.verify_con:hover .verify_btn {
+    border: #2B81B0 2px solid;
+    color: #2B81B0;
+    background-color: #EDF1F8;
+}
                                                         
 
 
@@ -721,4 +750,30 @@ a:hover {
         margin-left: 20px;
     }
 }
+
+
+/* lost
+
+.trans-history-btn {
+    width: 200px;
+    background-color: #FB8500;
+    border: #FB8500;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    font-weight: bold;
+    border-radius: 10px; 
+}
+.trans-history {
+    padding-left: 695px;
+}
+.trans-view-details-btn {
+    width:300px;
+    background-color: #BEE7FD;
+    border: #BEE7FD;
+    color: black;
+    font-weight: bold;
+    border-radius: 15px; 
+    font-size: 13px;
+}
+
+*/
 
