--- a/public/css/style_customer.css
+++ b/public/css/style_customer.css
@@ -795,12 +795,23 @@ a:hover {
 
 /* Cleaner Profile Page */
 
+.main_profile_con {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 85%;
+    height: 350px;
+    margin-left: 100px;
+    padding: 20px;
+    margin-top: 20px;
+    background-color: #fff;
+}
 .customer_profile_avatar_con {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 14rem;
-    height: 15rem;
+    width: 12rem;
+    height: 13rem;
     border-radius: 10px;
-    margin-top: 20px;
+    margin-left: -80px;
+    background-color: #EDF1F8;
+    margin-top: 10px;
 }
 .profile_avatar_img {
     height: 160px;
@@ -816,12 +827,13 @@ a:hover {
     border: none;
     outline: none;
     border-bottom: 5px solid #219EBC;
-    background-color: #EDF1F8;
+    background-color: #fff;
 }
 .customer_profile_name {
     color: #FFB703;
     font-weight: bold;
     font-size: 35px;
+    background-color: #fff;
 }
 .customer_profile_info_con {
     width: 90%;
@@ -830,11 +842,12 @@ a:hover {
     border: none;
     outline: none;
     border-bottom: 1px solid black;
-    background-color: #EDF1F8;
+    background-color: #fff;
 }
 .customer_profile_info {
     font-size: 15px;
     margin-top: 5px;
+    background-color: #fff;
 }
 .update_btn_con {
     width: 120px;
@@ -859,6 +872,7 @@ a:hover {
 
 
 /* Customer Dashboard */
+
 .customer_dashboard_con {
     margin-top: 50px;
 }
@@ -1012,3 +1026,8 @@ a:hover {
 
     }
 }   
+
+
+
+
+      
