--- a/public/css/style_welcome.css
+++ b/public/css/style_welcome.css
@@ -1,35 +1,141 @@
+body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background-color: #EDF1F8;
+    overflow-x: hidden;
+}
+
+/* Welcome Navbar */
+
+header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 0 100px;
+    width: 100%;
+    height: 10%;
+    box-sizing: border-box;
+    background: #d2dff5;
+}
+.logo {
+    color: #042A6B;
+    height: 50px;
+    line-height: 50px;
+    font-size: 30px;
+    float: left;
+    font-weight: bold;
+    font-style: italic;
+    margin-right: 160px;
+    margin-top: 5px;
+}
+.nav_con {
+    width: 125px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-top: 5px;
+}
+header nav ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+header nav ul li {
+    list-style: none;
+}
+nav ul li a {
+    margin-left: 10px;
+    height: 50px;
+    line-height: 50px;
+    padding: 0 20px;
+    color: #042A6B;
+    text-decoration: none;
+    display: inline-block;
+    font-weight: bold;
+}
+nav ul li a:hover 
+nav ul li a:active {
+    color: #FFFFFF;
+    background: #042A6B;
+}
+a:hover {
+    text-decoration: none;
+    color: #FFB703;
+}
+.active {
+    color: #FFB703 ;
+}
+.menu-toggle {
+    color: #FFFFFF;
+    float: right;
+    line-height: 50px;
+    font-size: 24px;
+    cursor: pointer;
+    display: none;
+}
+.login_con {
+    margin-left: 180px;
+    margin-top: 10px;
+}
+.login_inside_con {
+    width: 400px;
+}
+.login_btn {
+    background-color: #042A6B;
+    border: #042A6B;
+    color: white;
+    font-weight: bold;
+    border-radius: 5px; 
+    font-size: 16px;
+    width: 40%;
+    height: 40px;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover {background-color: #ddd;}
+.login_con:hover .dropdown-content {display: block;}
+.login_con:hover .login_btn {background-color: #2B81B0;}
+
+
 
 /* Welcome Page */
 
 .welcome_con {
     margin-top: 9vw;
-    margin-left: 350px;
+    margin-left: 13vw;
 }
 .welcome_title_con {
-    width: 700px;
+    width: 500px;
     text-align: center;
 }
 .welcome_title {
     font-weight: bold;
     color: #042A6B;
-
 }
 .welcome_sub_con {
-    width: 400px;
+    width: 320px;
     text-align: center;
-    margin-left: 150px;
+    margin-left: 80px;
 }
 .welcome_sub {
     font-weight: 300;
 }
 .signup_con {
     width: 200px;
-    margin-left: 250px;
+    margin-left: 140px;
     margin-top: 20px;
-   
-}
-.links{
-    font-size: 20px;
 }
 .signup_btn {
     background-color: #FFB703;
@@ -41,18 +147,199 @@
     width: 100x;
     height: 40px;
 }
-.fixed_footer{
+.signup_con:hover .signup_btn {
+    border: #FFB703 2px solid;
+    color: #FFB703;
+    background-color: #EDF1F8;
+}
+.welcome_fixed_footer{
     width: 100%;
-    position: fixed;        
+    height: 250px;      
     background-color: #042A6B;
     padding: 10px 0;
-    color: #fff;
-    height: 10%;
     bottom: 0;
+    margin-top: 150px;
+    color: #fff;
+}
+.fixed_footer{
+    width: 100%;
+    height: 250px;      
+    background-color: #042A6B;
+    padding: 10px 0;
+    bottom: 0;
+    margin-top: 300px;
+    color: #fff;
+}
+.footer_info_con {
+    width: 25%;
+    margin-left: 100px;
+    margin-top: 50px;
+    height: auto;
+    text-align: center;
+    font-size: 14px;
+}
+.contact_no {
+    color: #FFB703;
+}
+.footer_sign_con {
+    width: 250px;
+    margin-top: 50px;
+    margin-left: 100px;
+    float: right;
+}
+.signup_field:focus {
+    outline: none;
+}
+.footer_signup_btn {
+    margin-top: 15px;
+    font-weight: bold;
 }
 .footer_content {
-    float:left;
-    margin-left: 20px;
-    margin-top: 10px;
+    float:right;
+    margin-right: 20px;
+    margin-top: 40px;
     font-size: 14px;
+}
+
+
+
+
+/* About Us Page */
+
+.about_con {
+    margin: 0 auto;
+    margin-top: 10%;
+    width: 60%;
+    height: auto;
+    padding: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+}
+.about_title {
+    text-align: center;
+    font-weight: bold;
+    color: #042A6B;
+}
+.team_img_con {
+    margin: 0 auto;
+    margin-top: 10%;
+    width: 200px;
+    height: 200px;
+}
+.team_img {
+    width: 100%;
+    height: 100%;
+}
+.about_caption {
+    text-align: center;
+    font-size: 14px;
+}
+.story_title {
+    text-align: center;
+    font-weight: bold;
+    margin-top: 50px;
+}
+.story_con {
+    margin: 0 auto;
+    margin-top: 5%;
+    width: 700px;
+    height: 400px;
+    padding: 20px;
+}
+.story_paragraph {
+    font-size: 14px;
+}
+
+
+
+
+
+/* FAQs Page */
+
+.faqs_con {
+    margin: 0 auto;
+    margin-top: 10%;
+    width: 60%;
+    height: 500px;
+    padding: 20px;
+}
+.faqs_title {
+    text-align: center;
+    font-weight: bold;
+    color: #042A6B;
+}
+.faqs_table {
+    margin-top: 50px;
+}
+.faqs_row {
+    border-bottom: gray 1px solid;
+}
+
+
+
+
+/* Contact Us Page */
+
+.contact_con {
+    margin: 0 auto;
+    margin-top: 10%;
+    width: 80%;
+    height: 500px;
+    padding: 20px;
+}
+.side_img_con {
+    float: left;
+    width: 400px;
+    height: 380px;
+}
+.side_img {
+    width: 100%;
+    height: 100%;
+}
+.contact_title {
+    margin-left: 50px;
+    font-size: 50px;
+    font-weight: bold;
+    color: #042A6B;
+}
+.contact_form_con {
+    margin-left: 50px;
+    width: 550px;
+    height: 330px auto;
+    background-color: #fff;
+    border: 2px black solid;
+    padding: 20px;
+}
+.contact_form_main_con {
+    width: 250px;
+}
+.contact_fields {
+    border: none;
+    border-bottom: 2px solid black;
+    outline: none;
+    margin-top: 25px;
+    width: 250px;
+    padding: 3px;
+}
+.contact_us_btn {
+    width: 250px;
+    background-color: #FFB703;
+    border: #FFB703;
+    color: black;
+    font-weight: bold;
+    border-radius: 15px; 
+    font-size: 13px;
+    margin-top: 30px;
+}
+.contact_side_con {
+    width: 180px;
+    margin-left: 30px;
+}
+.contact_side_con_title {
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 30px;
+}
+.contact_side_info {
+    font-size: 15px;
 }
