--- a/public/css/style_welcome.css
+++ b/public/css/style_welcome.css
@@ -1,179 +1,252 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    background-color: #EDF1F8;
-    overflow-x: hidden;
-}
-
-/* Welcome Navbar */
-
-header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 0 100px;
-    width: 100%;
-    height: 10%;
-    box-sizing: border-box;
-    background: #d2dff5;
-}
-.logo {
-    color: #042A6B;
-    height: 50px;
-    line-height: 50px;
-    font-size: 30px;
-    float: left;
-    font-weight: bold;
-    font-style: italic;
-    margin-right: 160px;
-    margin-top: 5px;
-}
-.nav_con {
-    width: 125px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    margin-top: 5px;
-}
-header nav ul {
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-header nav ul li {
-    list-style: none;
-}
-nav ul li a {
-    margin-left: 10px;
-    height: 50px;
-    line-height: 50px;
-    padding: 0 20px;
-    color: #042A6B;
-    text-decoration: none;
-    display: inline-block;
-    font-weight: bold;
-}
-nav ul li a:hover 
-nav ul li a:active {
-    color: #FFFFFF;
-    background: #042A6B;
-}
-a:hover {
-    text-decoration: none;
-    color: #FFB703;
-}
-.active {
-    color: #FFB703 ;
-}
-.menu-toggle {
-    color: #FFFFFF;
-    float: right;
-    line-height: 50px;
-    font-size: 24px;
-    cursor: pointer;
-    display: none;
-}
-.login_con {
-    margin-left: 180px;
-    margin-top: 10px;
-}
-.login_inside_con {
-    width: 400px;
-}
-.login_btn {
-    background-color: #042A6B;
-    border: #042A6B;
-    color: white;
-    font-weight: bold;
-    border-radius: 5px; 
-    font-size: 16px;
-    width: 40%;
-    height: 40px;
-}
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-.dropdown-content a:hover {background-color: #ddd;}
-.login_con:hover .dropdown-content {display: block;}
-.login_con:hover .login_btn {background-color: #2B81B0;}
-
 
 
 /* Welcome Page */
+.banner-container{
+    align-items: center;
+    font-size: 30px;
+    background-size: cover;
+}
 
-.welcome_con {
-    margin-top: 9vw;
-    margin-left: 13vw;
+.banner{
+    background-color: #F7f7f7;
+    height: max-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.welcome_title_con {
-    width: 500px;
+
+
+.banner-container .banner .image{
+    flex:1 1 250px;
+    padding: 35px;
     text-align: center;
 }
-.welcome_title {
-    font-weight: bold;
-    color: #042A6B;
+
+.banner-container .banner .image img{
+    width: clamp(80%, 4vw, 90%);
 }
-.welcome_sub_con {
-    width: 320px;
+
+.banner-container .banner .text{
+    flex:1 1 250px;
+    padding: clamp(60px, 4vw, 10%);
     text-align: center;
-    margin-left: 80px;
+    align-items: center;
+    justify-content: center;
 }
-.welcome_sub {
-    font-weight: 300;
+
+.signup_btn{
+    background-color: #FB8500;
+    border: #FB8500;
 }
-.signup_con {
-    width: 200px;
-    margin-left: 140px;
-    margin-top: 20px;
+
+
+
+.text h1{
+    color: #1A5184;
+    font-weight:bolder;
+    font-size: clamp(30px, 4vw, 50px);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
-.signup_btn {
-    background-color: #FFB703;
-    border: #FFB703;
-    color: white;
-    font-weight: bold;
-    border-radius: 5px; 
-    font-size: 16px;
-    width: 100x;
-    height: 40px;
+
+
+.banner-container .banner .text p{
+    text-align: center;
+    font-size: clamp(15px, 2vw, 30px);
 }
-.signup_con:hover .signup_btn {
-    border: #FFB703 2px solid;
-    color: #FFB703;
-    background-color: #EDF1F8;
-}
-.welcome_fixed_footer{
+
+
+
+.three_reason{
     width: 100%;
-    height: 250px;      
-    background-color: #042A6B;
+    background-color: #1A5184;
     padding: 10px 0;
-    bottom: 0;
-    margin-top: 150px;
+    color: #fff;
+    height: 25%;
+}
+
+.container{
+    padding: 10px;
+    margin-top: 10px;
+}
+
+.row{
+    margin: auto;
+    display: flex;
+    align-items: center;
+
+}
+
+.text{
+    text-align: center;
+    padding: 10px;
+
+}
+
+.col{
+    text-align: center;
+    
+}
+
+.text h4{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 22px;
+    font-weight: 400;
+}
+
+.text p{
+    font-size: 15px;
+}
+.fas{
     color: #fff;
 }
+
+.more-info{
+    display:flow-root;
+    background: linear-gradient(-10deg, #fcd3b4, #fdf1e8, #bbdff1, #BEE7FD);
+}
+
+.row1{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 100px 0;
+}
+
+.col-5{
+    flex-basis: 30%;
+    margin-left: 7%;
+}
+
+.for-you{
+    font-size: clamp(15px, 2vw, 26px);
+    font-weight: 900;
+    color: #106ea5;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 25px;
+    text-transform: uppercase;
+}
+
+.title1{
+    font-size: clamp(35px, 4vw, 55px);
+    font-weight: bold;
+    color: #003464;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 35px;
+    line-height: clamp(50px, 4vw, 70px);
+}
+
+.br {
+    margin-bottom: 25px;
+ }
+
+.for-you-text{
+    font-size: clamp(22px, 3vw, 26px);
+    font-weight:400;
+    margin-bottom: 70px;
+    color: #4d4d4d;
+}
+
+.learn_btn{
+    background: #2B81B0
+}
+
+.col-7{
+    margin-left: 4%;
+    position: relative;
+    flex-basis: 60%;
+    display: flex;
+    align-items: center;
+}
+
+.col-7 .img-fluid{
+    width: 80%;
+}
+
+.color-box{
+    position: absolute;
+    right: 0;
+    top: 0;
+    background: #a9ccdd;
+    height: 100%;
+    width: 80%;
+    z-index: -1;
+    transform: translateX(0px) translateY(0px);
+    
+}
+
+.row2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 100px 0;
+}
+
+.col-6{
+    position: relative;
+    flex-basis: 60%;
+    display: flex;
+    align-items: center;
+}
+
+.col-6 .img-fluid{
+    height: 100%;
+}
+
+.foryou{
+    margin-left: 8%;
+    flex-basis: 70%;
+}
+.services{
+    margin-left: 2%;
+    flex-basis: 30%;
+    
+}
+
+.for-you2{
+    font-size: clamp(15px, 2vw, 26px);
+    font-weight: 900;
+    color: #ffba75;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 25px;
+    text-transform: uppercase;
+}
+
+.title2{
+    font-size: clamp(35px, 4vw, 55px);
+    font-weight: bold;
+    color: #FB8500;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 35px;
+    line-height: 70px;
+}
+
+.learn_srvbtn{
+    background: #f8b571
+}
+
+.grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    justify-content: center;
+    align-items:  center;
+    height: 100%;
+}
+
+
 .fixed_footer{
-    width: 100%;
-    height: 250px;      
+    width: 100%;       
     background-color: #042A6B;
     padding: 10px 0;
-    bottom: 0;
-    margin-top: 300px;
     color: #fff;
+    height: 25% auto;
+    bottom: 0;
 }
 .footer_info_con {
     width: 25%;
     margin-left: 100px;
-    margin-top: 50px;
+    margin-top: 30px;
     height: auto;
     text-align: center;
     font-size: 14px;
@@ -183,7 +256,7 @@ a:hover {
 }
 .footer_sign_con {
     width: 250px;
-    margin-top: 50px;
+    margin-top: 30px;
     margin-left: 100px;
     float: right;
 }
@@ -197,10 +270,140 @@ a:hover {
 .footer_content {
     float:right;
     margin-right: 20px;
-    margin-top: 40px;
+    margin-top: 10px;
     font-size: 14px;
 }
 
+.row3{
+    display: flex;
+    justify-content:left;
+    align-items: center;
+}
+.dcont{
+    margin-left: 2%;
+    flex-basis: 40%;
+    
+}
+.download{
+    display:flow-root;
+    background: #6DCFF6;
+    padding: 4%;
+}
+
+.dtitle{
+    font-size: clamp(35px, 4vw, 60px);
+    font-weight: 700;
+    color: #ffffff;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 25px;
+}
+.d-text{
+    font-size: clamp(15px, 4vw, 25px);
+    font-weight: 400;
+    color: #292929;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 35px;
+    line-height: 40px;
+}
+
+.footer{
+    background-color: #061835;
+    padding: .75%;
+}
+
+.row4{
+    
+    display: flex;
+    justify-content:left;
+    align-items: center;
+}
+
+.sweep-title{
+    font-size: clamp(15px, 4vw, 17px);
+    font-weight:400;
+    color: #F7f7f7;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.copyright{
+    font-size: clamp(15px, 4vw, 15px);
+    font-weight:400;
+    color: #F7f7f7;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: right;
+}
+
+
+@media (max-width:425px){
+    .banner-container .banner .image{
+        display: none;
+    }
+    .row1{
+        flex-direction: column-reverse;
+        margin: 50px 0;
+    }
+    .row2{
+       flex-direction: column;
+       margin: 50px 0;
+    }
+
+    .row3{
+        flex-direction: column;
+    }
+
+    .col-5{
+        margin: 2%;
+    }
+    .foryou{
+        padding: 7%;
+    }
+    .services{
+        padding: 7%;
+    }
+    .title2{
+        font-size: 35px;
+        font-weight: bold;
+        color: #FB8500;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin-bottom: 5px;
+        line-height: 20px;
+    }
+    .for-you-text{
+        margin-bottom: 35px;
+    }
+}
+
+
+
+@media only screen and (max-width:800px){
+    
+    .col-5{
+        flex-basis: 30%;
+        margin-left: 7%;
+    }
+    .col-7{
+        flex-basis: 100%;
+        margin-bottom: 10px;
+    }
+    .services{
+        margin: 2%;
+    }
+    .title2{
+        font-size: 35px;
+        font-weight: bold;
+        color: #FB8500;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin-bottom: 15px;
+        line-height: 50px;
+    }
+    
+}
+
+@media (max-width:750px){
+    .banner{
+        height: 60vh;
+    }
+}
 
 
 
@@ -256,23 +459,41 @@ a:hover {
 
 /* FAQs Page */
 
-.faqs_con {
-    margin: 0 auto;
-    margin-top: 10%;
-    width: 60%;
-    height: 500px;
-    padding: 20px;
-}
 .faqs_title {
     text-align: center;
     font-weight: bold;
     color: #042A6B;
 }
-.faqs_table {
-    margin-top: 50px;
+.faqs_con{
+    margin: 20px;
 }
-.faqs_row {
-    border-bottom: gray 1px solid;
+.answer{
+
+    font-size: medium;
+}
+
+.qna{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.qna_block{
+    border-bottom: 1px solid #003464;
+}
+
+.question_title{
+    
+}
+
+.question{
+    margin: 1rem 0rem;
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    cursor: pointer;
+    transition: 0.3s;
+    
 }
 
 
