--- a/public/css/style_admin.css
+++ b/public/css/style_admin.css
@@ -602,7 +602,12 @@ a:hover {
 
 
 /* Admin Services Page */
-
+.customer_search_con {
+    position: relative;
+    float: right;
+    margin-top: -60px;
+    margin-right: 50px;
+}
 .cards_title {
     display: block;
     font-size: 25px;
