--- a/public/css/customer_reg.css
+++ b/public/css/customer_reg.css
@@ -1,4 +1,5 @@
-.reg_customer_body {
+.reg_customer_body,
+.reg_cleaner_body {
     min-height: 100vh;
     background: linear-gradient(-16deg, #fcd3b4, #fdf1e8, #bbdff1, #BEE7FD);
 }
@@ -144,7 +145,8 @@
     margin-bottom: 10px;
 }
 
-.register_btn{
+.register_btn,
+.register_cleaner_btn{
     width: 100%;
     height: 30px;
     background-color: #e0996f;
@@ -197,6 +199,30 @@
     align-items: center;
 }
 
+
+.register_con_cleaner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: auto;
+    margin-left: auto;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    text-align: center;
+    max-width: 80%;
+    padding: 60px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px 0px rgb(63, 63, 63);
+    width: 100%;
+}
+
+.register_con_cleaner form .user-details{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    text-align: center;
+}
+
 @media (max-width: 800px){
 
     .register_con {
@@ -229,7 +255,7 @@
 }
 }
 @media (max-width: 576px){
-    .register_con {
+    .register_con, .register_con_cleaner {
         margin: auto;
         max-width: 90%;
         background-color: #FFFFFF;
@@ -240,38 +266,39 @@
     }
 }
 
-.container {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
 
-.justify-content-center {
-    -ms-flex-pack: center !important;
-    justify-content: center !important;
-}
-
-.row {
-    display: -ms-flexbox;
+.register_con form .user-details{
     display: flex;
-    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
+    justify-content: space-between;
+    text-align: center;
 }
-
-@media (min-width: 992px){
-.col-lg-4 {
-    -ms-flex: 0 0 33.33333333%;
-    flex: 0 0 33.33333333%;
-    max-width: 33.33333333%;
-}
+ 
+form .user-details .input-div, .form-group{
+    width: calc(100% / 2 - 10px);
 }
 
 
-.align-items-center {
-    -ms-flex-align: center !important;
-    align-items: center !important;
+
+@media (min-width: 700px){
+    .register_con, .register_con_cleaner{
+        max-width: 650px;
+    }
 }
+
+@media (max-width: 600px){
+    .register_con, .register_con_cleaner{
+        max-width: 90%;
+    }
+    form .user-details .input-div, .form-group{
+        width: 100%;
+    }
+
+    .register_con  form .user-details, .register_con_cleaner form .user-details{
+        max-height: 300px;
+        overflow-y:scroll;
+        justify-content: space-between;
+        text-align: center;
+    }
+}
+
