--- a/public/css/style_cleaner.css
+++ b/public/css/style_cleaner.css
@@ -6,110 +6,6 @@ body {
     overflow-x: hidden;
 }
 
-/* Cleaner Navbar */
-
-
-header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 0 100px;
-    width: 100%;
-    box-sizing: border-box;
-    background: #1A5184;
-}
-.logo {
-    color: #FFFFFF;
-    height: 50px;
-    line-height: 50px;
-    font-size: 30px;
-    float: left;
-    font-weight: bold;
-    font-style: italic;
-    width: 73%;
-}
-header nav ul {
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-header nav ul li {
-    list-style: none;
-}
-nav ul li a {
-    margin-left: 10px;
-    height: 50px;
-    line-height: 50px;
-    padding: 0 20px;
-    color: #FFFFFF;
-    text-decoration: none;
-    display: inline-block;
-    font-weight: bold;
-}
-nav ul li a:hover 
-nav ul li a:active {
-    color: #FFFFFF;
-    background: #04192E;
-}
-a:hover {
-    text-decoration: none;
-    color: #FFB703;
-}
-.active {
-    color: #FFB703;
-}
-.menu-toggle {
-    color: #FFFFFF;
-    float: right;
-    line-height: 50px;
-    font-size: 24px;
-    cursor: pointer;
-    display: none;
-}
-.customer_notif_icon {
-    color: white;
-    margin-top: 8px;
-}
-.dropdown_notif_icon::after {
-    display: none;
-}
-.profile_btn {
-    margin-top: -35px;
-    margin-left: 50px;
-}
-.profile_img {
-    width: 25px;
-    height: 25px;
-    margin-right: 5px;
-}
-.dropdown-toggle {
-    background-color: Transparent;
-    background-repeat:no-repeat;
-    border: none;
-    cursor:pointer;
-    overflow: hidden;
-    outline:none;
-    color: #FFFFFF ;
-}
-.caret {
-    color: #FFFFFF ;
-    width: 5px;
-    height: 5px;
-}
-.dropdown-menu {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-.dropdown-menu .dropdown-item {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-.dropdown-menu a:hover {background-color: #ddd;}
 
 /* Cleaner Search Bar */
 
@@ -137,19 +33,6 @@ a:hover {
 .customer_search_field:focus {
     outline:none!important;
 }
-.searchbar_dash { 
-    width: 100%;
-    height: 38px;
-    opacity: 1;
-    border: none;
-    padding-left: 10px;
-    font-size: 15px;
-    background-color: #DAE1EC;
-    border-radius: 5px;
-}
-.searchbar_dash:focus {
-    outline: none;
-}
 
 
 /* Cleaner Jobs Page */
@@ -163,7 +46,7 @@ a:hover {
 }
 .cleaner_job_title_con,
 .cleaner_profile_title_con {
-    margin-top: 10vw;
+    margin-top: 5vw;
     margin-left: 8vw;
 }
 .cleaner_job_con,
@@ -379,22 +262,20 @@ a:hover {
 .main_profile_con {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     width: 85%;
-    height: auto;
-    box-shadow: 10px;
+    height: 380px;
+    margin-left: 100px;
     padding: 20px;
+    margin-top: 20px;
     background-color: #fff;
-    margin: 0 auto;
-    margin-top: 3%;
-    margin-bottom: 10%;
 }
 .cleaner_profile_avatar_con {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin-top: 30px;
     width: 12rem;
     height: 13rem;
     border-radius: 10px;
     margin-left: -80px;
     background-color: #EDF1F8;
-    margin-top: 10px;
 }
 .profile_avatar_img {
     height: 160px;
@@ -403,9 +284,11 @@ a:hover {
     text-align: center;
 }
 .cleaner_profile_name_con {
-    width: 250%;
+    width: 270%;
+    height: 60px;
     margin-left: 30px;
     margin-top: 20px;
+    border: none;
     outline: none;
     border-bottom: 5px solid #219EBC;
     background-color: #fff;
@@ -414,12 +297,12 @@ a:hover {
     color: #FFB703;
     font-weight: bold;
     font-size: 35px;
-    background-color: #fff;
 }
 .cleaner_profile_info_con {
-    width: 100%;
-    height: auto;
+    width: 90%;
+    height: 50px;
     margin-left: 30px;
+    border: none;
     outline: none;
     border-bottom: 1px solid black;
     background-color: #fff;
@@ -427,18 +310,18 @@ a:hover {
 .cleaner_profile_info {
     font-size: 15px;
     margin-top: 5px;
-    background-color: #fff;
 }
 .update_btn_con {
     width: 120px;
-    height: 50px;
-    margin-top: 30%;
+    height: 60px;
+    margin-top: 220px;
     margin-left: 450px;
 }
 .cleaner_update_btn {
     width: 105px;
     color: #042A6B;
     font-size: 18px;
+    margin-top: 30px;
     outline: none;
 }
 .cleaner_update_btn:focus {
@@ -453,76 +336,67 @@ a:hover {
 
 /* Cleaner Dashboard */
 
-.row_dashboard {
-    margin-top: 30px;
-    padding: 20px;
+.cleaner_row_dashboard {
+    margin-top: 3.6vw;
 }
-.col_dashboard_main {
-    background-color: #FFFFFF;
-}
-.col-dashboard {
-    margin: 40px;
-    background-color: #EDF1F8;
-    height: 100%;
-    width: 300px;
+.cleaner_side_con {
+    height: 800px;
+    background-color: #d2dff5;
 }
 .local_time_con {
-    height: 13%;
-    width: 100%;
-    border-bottom: 3px  solid #04192E;
-    border-top: 3px  solid #04192E;
-    color: #042A6B;
+    height: 105px;
+    width: 330px;
+    background-color: #2B81B0;
     padding-top: 20px;
-    padding-left: 10px;
-    padding-right: 20px;
-    margin-top: 5%;
+    padding-bottom: 10px;
+    color: white;
+}
+.local_time_title {
+    font-weight: bold;
     text-align: center;
+    font-size: 20px;
+    margin-bottom: 5px;
 }
 .local_time {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 20px;
-    font-weight: bold;
+    text-align: center;
 }
 .side_con_title {
-    margin-top: 50px;
+    margin-top: 20px;
     font-family: sans-serif;
     margin-left: 20px;
     font-weight: bolder;
-    font-size: 20px;
-    margin-bottom: 30px;
+    font-size: 25px;
 }
 .available_job_con {
-    height: 100%;
-    width: 92%;
-    margin: 15px;
+    height: auto;
+    width: 300px;
     background-color: rgba(255, 183, 3, .5);
+    margin: 18px;
     border-left: 15px solid #FFB703;
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 .service_name {
     font-size: 20px;
     font-weight: bolder;
-    margin-top: auto;
-    margin-bottom: auto;
-    width: 100%;
+    color:#042A6B;
 }
 .customer_info {
     font-size: 13px;
 }
 .arrow_right_con {
-    width: 100%;
+    float: right;
+    margin-right: 20px;
+    margin-top: 30px;
 }
 .right {
     display: inline-block;
-    width: 2.2em;
-    height: 2.2em;
-    border: 4px solid #219EBC;
+    width: 2.3em;
+    height: 2.3em;
+    border: 0.3em solid #042A6B;
     border-radius: 50%;
+    margin-left: 1.5em;
 }
 .right:after {
     content: '';
@@ -531,15 +405,13 @@ a:hover {
     margin-left: 0.2em;
     width: 1em;
     height: 1em;
-    border-top: 0.2em solid #219EBC;
-    border-right: 0.2em solid #219EBC;
+    border-top: 0.2em solid #042A6B;
+    border-right: 0.2em solid #042A6B;
     -moz-transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
-} 
-.calendar_con {
-    max-width: 1000px;
-}
+}  
+
 
 
 
@@ -587,3 +459,8 @@ a:hover {
 
     }
 }   
+
+
+
+
+      
