--- a/public/css/cleaner_profile.css
+++ b/public/css/cleaner_profile.css
@@ -42,7 +42,7 @@
     text-align: center;
     border: none;
     outline: none;
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid #FFEDDF;
     background-color: #fff;
     
 }
