--- a/public/css/customer_reg.css
+++ b/public/css/customer_reg.css
@@ -14,7 +14,7 @@
     background-color: #fff;
     text-align: center;
     max-width: 60%;
-    padding: 60px;
+    padding: 40px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px 0px rgb(63, 63, 63);
     width: 100%;
@@ -267,22 +267,16 @@
 }
 
 
-.register_con form .user-details{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    text-align: center;
-}
- 
-form .user-details .input-div, .form-group{
-    width: calc(100% / 2 - 10px);
-}
-
-
 
 @media (min-width: 700px){
     .register_con, .register_con_cleaner{
         max-width: 650px;
+    }
+    .register_con  form .user-details, .register_con_cleaner form .user-details{
+        max-height: 300px;
+        overflow-y:scroll;
+        justify-content: space-between;
+        text-align: center;
     }
 }
 
