--- a/public/css/home.css
+++ b/public/css/home.css
@@ -32,6 +32,16 @@
     align-items: center;
     justify-content: center;
 }
+.banner1{
+    background-color: #FCFCFC;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .book_container{
     top: 50%;
@@ -316,4 +326,35 @@
     .download, .footer{
         display: none;
     }
+}
+
+.three_reason{
+    width: 100%;
+    background-color: #1A5184;
+    padding: 10px 0;
+    color: #fff;
+    height: 25%;
+}
+
+.text{
+    color: #1A5184;
+    font-weight:bolder;
+    font-size: clamp(30px, 4vw, 50px);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+.desc {
+    text-align: center;
+    font-size: clamp(15px, 2vw, 30px);
+    font-size: 15px;
+}
+.title{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 22px;
+    font-weight: 400;
+}
+
+.fas{
+    color: #fff;
 }
