--- a/public/css/cleaner.css
+++ b/public/css/cleaner.css
@@ -85,3 +85,40 @@
 .calendar_con {
     max-width: 1000px;
 }
+
+@media (max-width: 800px){
+    .col-sm-3 {
+        flex: 0 0 100%;
+        max-width: 100%;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .mobile-spacer {
+        display: block;
+        height: 80px;
+    }
+    .row {
+        display: -ms-flexbox;
+        /* display: flex; */
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        margin-right: 0px;
+        margin-left: 0px;
+    }
+    .fc-toolbar .fc-left .fc-right {
+        display: inline-block;
+    }
+}
+
+#footer {
+    margin-top: 30px;
+    background-color: #061835;
+    margin:0 auto;
+    width:100%;
+    height:auto;
+    overflow:hidden;
+    position: relative;
+    bottom: 0px;
+    padding: .75%;
+    color: white;
+} 
