--- a/public/css/cleaner_profile.css
+++ b/public/css/cleaner_profile.css
@@ -147,3 +147,36 @@
     padding: .75%;
     color: white;
 } 
+
+
+ .icon {
+    margin: 5px 0px;
+    width: 50px;
+    height: 50px;
+    border: 2px solid #34f234;
+    text-align: center;
+    display: inline-block;
+    border-radius: 50%;
+    line-height: 60px;
+    text-align: center;
+    margin-left: 40%;
+    margin-right: 40%;
+}
+
+.icon i.fa {
+    font-size: 30px;
+    color: #34f234;
+}
+
+.icon i.fa {
+    font-size: 30px;
+    color: #34f234;
+}
+
+
+.title {
+    margin: 5px 0px;
+    font-size: 30px;
+    font-weight: 600;
+    text-align: center;
+}
