--- a/public/css/nav-cleaner.css
+++ b/public/css/nav-cleaner.css
@@ -103,6 +103,10 @@ body{
         font-weight:700;
         text-decoration: underline;
     }
+    .dropdown{
+        position: relative;
+        list-style: none;
+    }
     
 }
 @media only screen and (max-width: 800px){
