--- a/public/css/nav-customer.css
+++ b/public/css/nav-customer.css
@@ -1,3 +1,4 @@
+
 body{
     overflow-x: hidden;
 }
@@ -102,6 +103,11 @@ body{
         color: #1A5184 ;
         font-weight:700;
         text-decoration: underline;
+    }
+
+    .dropdown{
+        position: relative;
+        list-style: none;
     }
     
 }
