--- a/public/css/cleaner.css
+++ b/public/css/cleaner.css
@@ -87,9 +87,10 @@
 }
 
 @media (max-width: 800px){
-    .col-sm-3 {
+    .col-md-3 {
         flex: 0 0 100%;
         max-width: 100%;
+        height: 50vh;
         padding-left: 0px;
         padding-right: 0px;
     }
@@ -115,6 +116,7 @@
         transform: translate(-50%, 50%);
         font-size: 30px;
         color: #afafaf;
+        padding-top: 300px;
         text-align: center;
     }
     .weekly_revenue {
@@ -148,6 +150,7 @@
     transform: translate(-50%, -50%);
     font-size: 30px;
     color: #afafaf;
+    padding-top: 300px;
 }
 
 #report {
@@ -163,7 +166,6 @@
 
 .weekly_revenue {
     height: 90px;
-    width: 20%;
     background-color: #a7e9fa;
     border-left: 10px solid #2B81B0;
     padding: 13px;
