--- a/public/css/cleaner_job.css
+++ b/public/css/cleaner_job.css
@@ -112,9 +112,8 @@
     background-color: #061835;
     margin: 0 auto;
     width: 100%;
-    height: 100%;
     overflow: hidden;
-    position: relative;
+    position: fixed;
     bottom: 0px;
     padding: .75%;
     color: white;
@@ -251,6 +250,9 @@
     .qoute {
         margin: 0% 7% 15% 7%;
         font-size: clamp(10px, 4vw, 25px);
+    }
+    .banner-container .banner1 .image{
+        display: none
     }
 }
 
